--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: none;
-  overflow-y: none;
-  max-height: 100vh;
 }
 
 code {
